# rust-openchat-bot

./: .cursorignore  .gitignore  Cargo.toml  LICENSE  README.md  config.toml
src/: arg.rs  bot.rs  config.rs  download_model.py  lib.rs  main.rs  simple.rs  token_output_stream.rs  utils.rs
src/models/: mod.rs  q_llama.rs  q_qwen2.rs  quantized_qwen2.rs  qwen.rs
src/tests/: mod.rs  quant.rs  quantized_qwen2.rs  qwen2.rs  template.rs
src/utils/: load.rs  mod.rs  template.rs
template/: Cargo.toml
template/src/: lib.rs
templates/: qwen.jinja
