[package]
name = "openchat_bot"
version = "0.1.0"
edition = "2021"

[lints.rust]
unused = "allow"

[dependencies]
anyhow = "1"

intel-mkl-src = { version = "0.8", features = ["mkl-static-lp64-iomp"] }

candle = { package = "candle-core", version = "0.8", features = ["cuda"] }
candle-transformers = { version = "0.8", features = ["cuda"] }
candle-examples = "0.8"

hf-hub = { version = "0.4", features = ["tokio"] }
tokenizers = "0.21"

tokio = { version = "1", features = ["full"] }
async-stream = "0.3"
futures-core = "0.3"
futures-util = "0.3"

tracing = "0.1"
tracing-subscriber = "0.3"

which = "7"

enum-assoc = "1.2"

config = "0.15"

