[package]
name = "template"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
minijinja = {version = "2.9", features = ["loader"]}
derive-new = "0.7"
tokio = { workspace = true }
hf-hub = { version = "0.4", features = ["tokio"] }
parking_lot = "0.12"